--- a/contact.html
+++ b/contact.html
@@ -121,21 +121,21 @@
         <div class="col-lg-2">
             <img class="footerlogo" src="images/logo-white.svg" alt="" srcset="">
         </div><div class="colo-lg-4">
-                    <a href="" class="">
+                    <a href="./index.html" class="">
                         <h6 class="home-bot">Home</h6>
                     </a>
 
 
            
 
-                    <a href="" class="">
+                    <a href="./portofolio.html" class="">
                         <h6 class="porf-bot bot-link">portfolio</h6>
                     </a>
 
                     `
            
 
-                    <a href="" class="">
+                    <a href="./contact.html" class="">
                         <h6 class="contact bot-link">Contact Me</h6>
                     </a>
 
