--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    
    
    <style>
-        .h5home1{
+        .h5home1,.h6home{
             color: #087e8b;
         }
     </style>
@@ -82,61 +82,61 @@
         <img class="homeimg" src="images/image-homepage-hero@2x.jpg" alt="" srcset="">
     </div>
     <div class="hometext">
-        <h3 class="h3home">Hey,<span class="name-home"> I'am David <br> Dewa </span>and i <br> love buliding <br> beautiful websites</h3>
-        <button class="btn-about-me"><img class="arrowimg" src="images/down-arrows.svg" alt="" srcset=""> About me</button>
-
+        <h3 class="h3home">Hey, I'am David <br> Dewa and i <br> love buliding <br> beautiful websites</h3>
+       <a href="#pabout"> <button class="btn-about-me"><img class="arrowimg" src="images/down-arrows.svg" alt="" srcset=""> About me</button>
+</a>
     </div>
-    <div class="row">
+    <div class="row" id="about">
         <div class="col-lg-4 profileimg">
             <img class="profileimg" src="images/image-homepage-profile.jpg" alt="" srcset="">
         </div>
         <div class="col-lg-3 aboutme-text">
-            <h1 class="abouth1">About Me</h1>
+            <h1 id="pabout" class="abouth1">About Me</h1>
             <p class="pabout">
                 I’m a front-end developer looking for a new role in an exciting company. 
                 I focus on writing accessible HTML, using modern CSS practices and writing clean 
                 JavaScript. When writing JavaScript code, I mostly use React, but I can adapt to 
-                whatever tools are required. I’m based in London, UK, but I’m happy working remotely 
+                whatever tools are required.  I’m happy working remotely 
                 and have experience in remote teams. When I’m not coding, you’ll find me outdoors. 
                 I love being out in nature whether that’s going for a walk, run or cycling. I’d love 
                 you to check out my work.   
-            </p>
-            <button class="aboutbtn">Go to portfolio</button>
+            </p><a href="./portofolio.html">
+            <button  class="aboutbtn">Go to portfolio</button></a>
         </div>
     </div>
 
     <section class="row">
-        <div class="col-lg-3  section-middle-h2">
-            <h2>Interested in doing <br> a project together? </h2>
+        <div class="col-lg-4  section-middle-h2">
+            <h2 class="interst-h2">Interested in doing <br> a project together? </h2>
         </div>
-        <div class="col-lg-4 section-middle">
+        <div class="col-lg-4 section-middle section-middle-hr">
             <hr>
 
         </div>
         <div class="col-lg-2 section-middle">
 
-            <a class="btn btn-secondary" href="contact me">contact me</a></div>
+            <a class="btn btn-secondary" href="./contact.html">contact me</a></div>
     </section>
     <footer>
         <div class="row">
             <div class="col-lg-2">
                 <img class="footerlogo" src="images/logo-white.svg" alt="" srcset="">
             </div><div class="colo-lg-4">
-                        <a href="" class="">
-                            <h6 class="home-bot">Home</h6>
+                        <a href="./index.html" class="">
+                            <h6 class="home-bot h6home">Home</h6>
                         </a>
 
 
                
 
-                        <a href="" class="">
+                        <a href="./portofolio.html" class="">
                             <h6 class="porf-bot bot-link">portfolio</h6>
                         </a>
 
                         `
                
 
-                        <a href="" class="">
+                        <a href="./contact.html" class="">
                             <h6 class="contact bot-link">Contact Me</h6>
                         </a>
 
