--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,10 @@
            
         </div>
         <div class="col-lg-3 linkicons">
-            <img src="images/github.svg" alt="" srcset="">
-            <img class="twitter" src="images/twitter.svg" alt="" srcset=""> </div>
+          <ion-icon name="logo-github"></ion-icon> 
+          <ion-icon class="twitter" name="logo-twitter"></ion-icon> 
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </div>
     </div>
 
 
@@ -184,6 +186,6 @@ function validateForm(){
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  
+  <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
  </body>
  </html>
