--- a/portofolio.html
+++ b/portofolio.html
@@ -8,6 +8,8 @@
    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/portofolio.css">
+    <link rel="shortcut icon" href="images/favicon.ico2" type="image/x-icon">
+ 
     <title>personal-site</title>
 </head>
 
