--- a/portofolio.html
+++ b/portofolio.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/portofolio.css">
     <link rel="shortcut icon" href="images/favicon.ico2" type="image/x-icon">
@@ -321,8 +322,15 @@
            
         </div>
         <div class="col-lg-3 linkicons">
-          <ion-icon name="logo-github"></ion-icon> 
-          <ion-icon class="twitter" name="logo-twitter"></ion-icon> 
+          <a class="telb-link" href="https://t.me/David_dewa"> <i class="fa fa-telegram" style="font-size:36px;color: white;"></i>
+          </a>
+          <a href="https://github.com/dewaadu">
+ 
+          <ion-icon name="logo-github"></ion-icon> </a>
+
+          <a href="www.twitter.com/Daviddewa4">
+       <ion-icon class="twitter" name="logo-twitter"></ion-icon> </a>
+  
           <ion-icon name="logo-linkedin"></ion-icon>
     
         </div>
