--- a/portofolio.html
+++ b/portofolio.html
@@ -324,11 +324,11 @@
         <div class="col-lg-3 linkicons">
           <a class="telb-link" href="https://t.me/David_dewa"> <i class="fa fa-telegram" style="font-size:36px;color: white;"></i>
           </a>
-          <a href="https://github.com/dewaadu">
+          <a href="https://github.com/dewaa">
  
           <ion-icon name="logo-github"></ion-icon> </a>
 
-          <a href="www.twitter.com/Daviddewa4">
+          <a href="www.twitter.com/Daviddew45">
        <ion-icon class="twitter" name="logo-twitter"></ion-icon> </a>
   
           <ion-icon name="logo-linkedin"></ion-icon>
