--- a/portofolio.html
+++ b/portofolio.html
@@ -127,7 +127,7 @@
             built it so that it was fully-responsive. I took a laptop-first approach and used modern 
             CSS like row and Grid for layout purposes.
           </p>
-          <a href="https://dewa-adu-fylo-landing-page.vercel.app">
+          <a href="https://dewa-adu-fylo-landing-page.vercel.app7">
           <button class="btn-pro">View Project</button> </a>  
         </div>
         <div class="col-lg-6 port-pad port-pad2">
