--- a/portofolio.html
+++ b/portofolio.html
@@ -77,7 +77,7 @@
             built it so that it was fully-responsive. I took a laptop-first approach and used modern 
             CSS like row and Grid for layout purposes.
           </p>
-          <a href="https://dewa-adu-fylo-dark-theme-landing-page.vercel.app
+          <a href="https://dewa-adu-fylo-dark-theme-landing-page.vercel.app7
           ">
           <button class="btn-pro">View Project</button></a>
           
@@ -89,7 +89,7 @@
           <p class="body">This project required me to build a fully responsive landing page to the designs provided. 
             I used HTML5 and pure css, along with bootstrap library only
           </p>
-          <a href="https://dewa-adu-easybank-landing-page-master.vercel.app
+          <a href="https://dewa-adu-easybank-landing-page-master.vercel.app7
           ">
           <button class="btn-pro">View Project</button> </a>  
         </div>
